--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,20 +8,22 @@
         tools:context=".MainActivity">
 
     <LinearLayout
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            >
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/idHeader"
+                android:id="@+id/header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/header_background"
+                app:layout_constraintStart_toStartOf="parent"
                 android:padding="20dp"
                 app:layout_constraintTop_toTopOf="parent"
-                android:background="@drawable/header_background"
-                app:layout_constraintStart_toStartOf="parent">
+                >
 
             <TextView
                     android:layout_width="wrap_content"
@@ -32,7 +34,7 @@
                     android:textStyle="bold"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:id="@+id/s1_logo" />
+                    android:id="@+id/logo1" />
 
             <ImageButton
                     android:layout_width="48dp"
@@ -43,8 +45,9 @@
                     android:background="@drawable/carttop"
                     style="@android:style/Widget.ImageButton"
                     android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-                    android:id="@+id/s1_go_to_cart" />
+                    app:layout_constraintBottom_toTopOf="@+id/layout2"
+                    android:id="@+id/goToCartBtn"
+                android:contentDescription="TODO" />
 
             <ImageButton
                     android:layout_width="50dp"
@@ -55,19 +58,20 @@
                     android:background="@drawable/home_icon"
                     android:visibility="gone"
                     android:layout_marginBottom="7dp"
-                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-                    app:layout_constraintEnd_toStartOf="@+id/s1_go_to_cart"
-                    android:layout_marginEnd="16dp" />
+                    app:layout_constraintBottom_toTopOf="@+id/layout2"
+                    app:layout_constraintEnd_toStartOf="@+id/goToCartBtn"
+                    android:layout_marginEnd="16dp"
+                android:contentDescription="TODO" />
 
             <LinearLayout
                     android:layout_width="match_parent"
-                    app:layout_constraintTop_toBottomOf="@+id/s1_logo"
+                    app:layout_constraintTop_toBottomOf="@+id/logo1"
                     android:orientation="horizontal"
                     android:layout_marginTop="20dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:background="@drawable/white_rectangle_background"
                     android:layout_height="wrap_content"
-                    android:id="@+id/linearLayout2">
+                    android:id="@+id/layout2">
 
                 <EditText
                         android:layout_width="wrap_content"
@@ -97,7 +101,7 @@
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/idHeader"
+                app:layout_constraintTop_toBottomOf="@id/header"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:spanCount="2"
