--- a/app/src/main/res/layout/cart_activity.xml
+++ b/app/src/main/res/layout/cart_activity.xml
@@ -7,7 +7,7 @@
         android:background="@color/colorBackground">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/idHeader"
+            android:id="@+id/header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="20dp"
@@ -25,7 +25,7 @@
                 android:layout_marginEnd="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:id="@+id/s2_go_to_cart2"
+                android:id="@+id/buttonGoToCart2"
             android:contentDescription="TODO" />
 
         <TextView
@@ -47,7 +47,7 @@
                 android:scaleType="fitXY"
                 android:background="@drawable/backbutton"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/s2_go_to_cart2"
+                app:layout_constraintEnd_toStartOf="@+id/buttonGoToCart2"
                 android:layout_marginEnd="15dp"
             android:contentDescription="TODO" />
 
@@ -58,7 +58,7 @@
             android:layout_width="421dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@+id/footer"
-            app:layout_constraintTop_toBottomOf="@+id/idHeader"
+            app:layout_constraintTop_toBottomOf="@+id/header"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
@@ -70,20 +70,20 @@
                     android:text="@string/app_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/mycart_center"
+                    android:id="@+id/cartCenter"
                     android:textStyle="bold"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.509"
                     android:layout_marginTop="12dp"
-                    app:layout_constraintTop_toBottomOf="@+id/big_cart_icon" />
+                    app:layout_constraintTop_toBottomOf="@+id/bigCartIcon" />
 
             <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="100dp"
                     app:srcCompat="@drawable/bigcart"
-                    android:id="@+id/big_cart_icon"
+                    android:id="@+id/bigCartIcon"
                     tools:layout_editor_absoluteX="0dp"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginTop="26dp"
@@ -93,7 +93,7 @@
                     android:text="@string/col_sum_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/sum_price_col"
+                    android:id="@+id/sumPriceCol"
                     android:layout_marginEnd="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent" />
@@ -103,9 +103,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/quantity_col"
-                    app:layout_constraintEnd_toStartOf="@+id/sum_price_col"
+                    app:layout_constraintEnd_toStartOf="@+id/sumPriceCol"
                     android:layout_marginEnd="41dp"
-                    app:layout_constraintTop_toBottomOf="@+id/mycart_center"
+                    app:layout_constraintTop_toBottomOf="@+id/cartCenter"
                     android:layout_marginTop="20dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -131,42 +131,47 @@
                 android:layout_width="65dp"
                 android:layout_height="31dp"
                 android:text="@string/total"
+                android:layout_marginStart="27dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="25dp"
                 android:textColor="@color/colorWhite"
+                app:layout_constraintStart_toStartOf="parent"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 android:id="@+id/footer_text"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="27dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="25dp" />
+                 />
 
         <ImageButton
                 android:layout_width="48dp"
-                android:layout_height="48dp"
-                app:srcCompat="@drawable/debit_card"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:scaleType="centerCrop"
                 android:background="@drawable/debit_card"
                 style="@android:style/Widget.ImageButton"
+                android:layout_height="48dp"
+                app:srcCompat="@drawable/debit_card"
                 android:layout_marginEnd="36dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
+
                 android:id="@+id/check_out"
                 android:layout_marginBottom="20dp"
             android:contentDescription="TODO" />
 
         <TextView
-                android:text="@string/zeroPrice"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/footerPrice"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:id="@+id/footer_price"
+                android:text="@string/zeroPrice"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="25dp"
-                android:textColor="@android:color/holo_orange_light"
                 android:textStyle="bold"
                 app:layout_constraintHorizontal_bias="0.501"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:layout_height="wrap_content"
+
+                android:textColor="@android:color/holo_orange_light"
+                app:layout_constraintEnd_toEndOf="parent"
+                 />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
