--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -7,36 +7,42 @@
         android:background="@drawable/white_rectangle_background">
 
     <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/linearLayout3">
+            android:orientation="horizontal"
+
+            android:id="@+id/layout3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <ImageView
                 android:layout_width="100dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+
+                android:id="@+id/imageView"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/raw_img"
-                android:id="@+id/imageView"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp" />
+                />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:layout_marginTop="5dp">
+                >
 
             <TextView
                     android:text="TextView"
                     android:layout_width="100dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="5dp"
                     android:layout_height="75dp"
-                    android:id="@+id/name2"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="5dp" />
+                    android:id="@+id/secondName"
+
+                     />
 
             <TextView
                     android:text="TextView"
@@ -52,36 +58,44 @@
             <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@android:drawable/arrow_up_float"
-                    android:id="@+id/upBtn"
+
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:id="@+id/upButton"
                     android:layout_marginEnd="120dp"
+                    app:srcCompat="@android:drawable/arrow_up_float"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginBottom="5dp"
-                    app:layout_constraintBottom_toTopOf="@+id/quantity"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/cartQuantity"
+
+
                     android:layout_marginTop="5dp"
                     android:minWidth="48dp"
-                    android:minHeight="48dp" />
+                    android:minHeight="48dp"
+                android:contentDescription="TODO" />
 
             <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@android:drawable/arrow_down_float"
-                    android:id="@+id/downBtn"
+                    app:layout_constraintTop_toBottomOf="@+id/cartQuantity"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="5dp"
+
                     android:layout_marginEnd="120dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginTop="5dp"
-                    app:layout_constraintTop_toBottomOf="@+id/quantity"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_marginBottom="5dp"
+                    app:srcCompat="@android:drawable/arrow_down_float"
+                    android:id="@+id/downButton"
+
+
                     android:minWidth="48dp"
-                    android:minHeight="48dp" />
+                    android:minHeight="48dp"
+                android:contentDescription="TODO" />
 
             <TextView
                     android:text="TextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/total_price"
+                    android:id="@+id/totalPrice"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginTop="63dp"
                     android:layout_marginEnd="5dp"
@@ -92,14 +106,14 @@
                     android:text="TextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/quantity"
+                    android:id="@+id/cartQuantity"
                     android:textColor="@android:color/holo_orange_dark"
                     android:layout_marginEnd="125dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginTop="5dp"
-                    app:layout_constraintTop_toBottomOf="@+id/upBtn"
+                    app:layout_constraintTop_toBottomOf="@+id/upButton"
                     android:layout_marginBottom="5dp"
-                    app:layout_constraintBottom_toTopOf="@+id/downBtn" />
+                    app:layout_constraintBottom_toTopOf="@+id/downButton" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
